--- a/src/main/res/values-zh-rCN/strings.xml
+++ b/src/main/res/values-zh-rCN/strings.xml
@@ -5,5 +5,13 @@
     <string name="locked_app">已加锁</string>
     <string name="hide_app">隐藏应用</string>
     <string name="my_app">我的</string>
+    
+    <string name="password_null">密码不能为空</string>
+    <string name="password_error">密码错误，请重新输入</string>
+    <string name="enter_password_title">程序加密</string>
+    <string name="password_input_title">请输入密码</string>
+    <string name="password_input_hint">请输入密码</string>
+    <string name="confirm">确认</string>
+    <string name="cancel">取消</string>
 
 </resources>
